# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  18 Aug 2005; Mike Frysinger <vapier@gentoo.org>:

    Add a note about the 6th field for root filesystems #95846.

  16 Aug 2005; Mike Frysinger <vapier@gentoo.org>:

    rquotad is supposed to be an alias for port 4003 not 4002.

  15 Aug 2005; Mike Frysinger <vapier@gentoo.org>:

    Add ocfs2 to the NET_FS_LIST #102659 by Lazar Obradovic.

  15 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    iproute2 now understands the old iface_xxx syntax, but this only works
    if ifconfig (from net-tools) is installed

  14 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    fallback_route_eth0 now works again

    Implemented interactive startup - fixes #5353
    Thanks to Paul Pacheco for the patch

  13 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    Parallel startup races should now be fixed

    iwconfig now scans for mode so you can prefer ad-hoc networks

  12 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    RC_AUTO_INTERFACE now defaults to no - we no longer mess with /etc unless
    told too

    tuntap no longer complains about ${devnull}

    We now merge resolv.conf and ntp.conf from active interfaces

  11 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    Add support for --pid ${pidfile} and --pidfile=${pidfile} in rc-daemon.sh

    Remove tail from depdir() in /sbin/modules-update

  10 Aug 2005; Mike Frysinger <vapier@gentoo.org>:

    Document the boot logging option RC_BOOTLOG with app-admin/showconsole.

  08 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    Add failup/faildown user functions when an interface fails to come up/go
    down. Fixes bug #101087.

  06 Aug 2005; Mike Frysinger <vapier@gentoo.org>:

    Add a lot more documentation to /etc/hosts from FreeBSD's standard hosts 
    file #101418 by Mark Cooper.

  06 Aug 2005; Martin Schlemmer <azarah@gentoo.org>:
